# insights-storage-broker

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile-smoke.groovy  Makefile  Pipfile  README.md  app.py  build_deploy.sh  compose.yml  default_map.yaml  pr_check.sh  pyproject.toml  requirements.txt  rhosak_map.yaml  sequence-alt.puml  sequence-puptoo.puml  sequence.puml  setup.py
.tekton/: insights-storage-broker-pull-request.yaml  insights-storage-broker-push.yaml  storage-broker-pull-request.yaml  storage-broker-push.yaml
dashboards/: grafana-dashboard-insights-storage-broker-general.configmap.yaml
deploy/: clowdapp.yml
docs/: arch.puml  flow.puml
mq/: consume.py  msgs.py
schema/: sb.openapi.yaml
src/storage_broker/: __init__.py  app.py  default_map.yaml  normalizers.py
src/storage_broker/api/: __init__.py
src/storage_broker/consumer_api/: __init__.py
src/storage_broker/mq/: common.py  consume.py  msgs.py  produce.py
src/storage_broker/storage/: aws.py
src/storage_broker/utils/: broker_logging.py  config.py  metrics.py
storage/: aws.py
templates/: deployment.yml
tests/: test_msgs.py
utils/: broker_logging.py  config.py  produce_message.py
