[tool.poetry]
name = "insights-storage-broker"
version = "0.1.0"
description = "Manages objects in cloud storage"
authors = ["Stephen Adams <sadams@redhat.com>"]
packages = [
    { include = "src/storage_broker"}
]

[tool.poetry.dependencies]
python = "3.6"
confluent-kafka = "1.5.0"
attrs = "18.2.0"
prometheus-client = "0.7.1"
logstash-formatter = "0.5.17"
watchtower = "0.7.3"
pyyaml = "5.3.1"
boto3 = "1.12.38"
app-common-python = "0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
storage_broker = "src.storage_broker.app:main"