[tool.poetry]
name = "insights-storage-broker"
version = "0.1.0"
description = "Manages objects in cloud storage"
authors = ["Stephen Adams <sadams@redhat.com>"]
packages = [
    { include = "src/storage_broker"}
]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.2.0"
attrs = "18.2.0"
prometheus-client = "0.7.1"
pyyaml = "6.0.1"
app-common-python = "0.2.3"
boto3 = "^1.28.21"
watchtower = "^3.0.1"
logstash_formatter = "^0.5.17"
Flask = "2.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
storage_broker = "src.storage_broker.app:main"
storage_broker_api = "src.storage_broker.api:main"
storage_broker_consumer_api = "src.storage_broker.consumer_api:main"
